--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,6 +9,8 @@
 body {
     background: #c1bdba;
     font-family: 'Titillium Web', sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
 a {
@@ -74,7 +76,7 @@ h1 {
     margin: 0 0 40px;
 }
 
-label {
+.label {
     position: absolute;
     -webkit-transform: translateY(6px);
     transform: translateY(6px);
@@ -86,26 +88,26 @@ label {
     pointer-events: none;
     font-size: 22px;
 }
-label .req {
+.label .req {
     margin: 2px;
     color: #1ab188;
 }
 
-label.active {
+.label.active {
     -webkit-transform: translateY(50px);
     transform: translateY(50px);
     left: 2px;
     font-size: 14px;
 }
-label.active .req {
+.label.active .req {
     opacity: 0;
 }
 
-label.highlight {
+.label.highlight {
     color: #ffffff;
 }
 
-input, textarea {
+.input, .textarea {
     font-size: 22px;
     display: block;
     width: 100%;
@@ -118,12 +120,12 @@ input, textarea {
     -webkit-transition: border-color .25s ease, box-shadow .25s ease;
     transition: border-color .25s ease, box-shadow .25s ease;
 }
-input:focus, textarea:focus {
+.input:focus, .textarea:focus {
     outline: 0;
     border-color: #1ab188;
 }
 
-textarea {
+.textarea {
     border: 2px solid #a0b3b0;
     resize: vertical;
 }
@@ -222,4 +224,67 @@ textarea {
 .checkboxField:checked:before {
     background-color: #1ab188;
     border-color: white;
+}
+
+
+
+/* NAVBAR */
+.smth_h2_ul{
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+ol, ul {
+    list-style: none;
+}
+nav {
+    width: 100%;
+    height: 62px;
+    background: rgba(19, 35, 47, 0.9);
+}
+.sitename{
+    width: 285px;
+    height: 100%;
+    float: left;
+    padding-left: 15px;
+    padding-top: 14px
+}
+.sitename > h2{
+    color: white;
+    font-size: 28px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold
+}
+.sitename > h2::before{
+    content: "✔";
+    margin-right: 10px
+}
+.list_in_head{
+    width: 430px;
+    height: 100%;
+    float: right;
+    padding-top: 20px;
+    padding-right: 10px
+}
+.list_in_head li{
+    display: inline;
+    font-family: 'Montserrat', sans-serif;
+    margin-left: 15px;
+    color: white;
+}
+.list_in_head a{
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+}
+.profile_pic::before{
+    content: url(photos/people.png);
+    margin-right: 6px
+}
+.logout_pic::before{
+    content: url(photos/signs.png);
+    margin-right: 6px
 }
