--- a/client/src/pages/ShowContest/ShowContest.module.scss
+++ b/client/src/pages/ShowContest/ShowContest.module.scss
@@ -10,23 +10,23 @@
   font-size: 18px;
 }
 
-button {
-  border: none;
-  outline: 0;
-  display: inline-block;
-  padding: 8px;
-  color: white;
-  background-color: #000;
-  text-align: center;
-  cursor: pointer;
-  width: 100%;
-  font-size: 18px;
-}
-
-
-button:hover, a:hover {
-  opacity: 0.7;
-}
+//button {
+//  border: none;
+//  outline: 0;
+//  display: inline-block;
+//  padding: 8px;
+//  color: white;
+//  background-color: #000;
+//  text-align: center;
+//  cursor: pointer;
+//  width: 100%;
+//  font-size: 18px;
+//}
+//
+//
+//button:hover, a:hover {
+//  opacity: 0.7;
+//}
 
 .checkbox {
   display: inline;
