--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,7 +7,7 @@
 } */
 
 body {
-    background: #c1bdba;
+    background: white;
     font-family: 'Titillium Web', sans-serif;
     margin: 0;
     padding: 0;
@@ -24,7 +24,7 @@ a:hover {
 }
 
 .form {
-    background: rgba(19, 35, 47, 0.9);
+    background: #34558b;
     padding: 40px;
     max-width: 600px;
     margin: 40px auto;
@@ -243,7 +243,7 @@ ol, ul {
 nav {
     width: 100%;
     height: 62px;
-    background: rgba(19, 35, 47, 0.9);
+    background: #34558b;
 }
 .sitename{
     width: 285px;
