--- a/client/src/index.css
+++ b/client/src/index.css
@@ -28,7 +28,7 @@ a:hover {
     padding: 40px;
     max-width: 600px;
     margin: 40px auto;
-    border-radius: 4px;
+    border-radius: 1em;
     box-shadow: 0 4px 10px 4px rgba(19, 35, 47, 0.3);
 }
 
