--- a/client/src/pages/ShowContest/ShowContest.module.scss
+++ b/client/src/pages/ShowContest/ShowContest.module.scss
@@ -1,35 +1,5 @@
 @import "../../styles/colors.scss";
 
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  max-width: 300px;
-  margin: auto;
-  text-align: center;
-}
-
-.title {
-  color: grey;
-  font-size: 18px;
-}
-
-//button {
-//  border: none;
-//  outline: 0;
-//  display: inline-block;
-//  padding: 8px;
-//  color: white;
-//  background-color: #000;
-//  text-align: center;
-//  cursor: pointer;
-//  width: 100%;
-//  font-size: 18px;
-//}
-//
-//
-//button:hover, a:hover {
-//  opacity: 0.7;
-//}
-
 .checkbox {
   display: inline;
 }
@@ -51,6 +21,24 @@
   }
 }
 
+.mark {
+  width: 450px;
+  height: auto;
+  background-color: lighten($primaryColor, 0%);
+  margin: 1.5em auto;
+  padding-bottom: 1em;
+  border-radius: 15px;
+  border-top: 5px solid $primaryColor;
+  border-left: 5px solid $primaryColor;
+  box-shadow: 4px 4px 8px rgba(0,0,0,0.5);
+
+  p {
+    font-size: 2em;
+    font-weight: 500;
+    margin: 1em;
+    color: white;
+  }
+}
 
 .task {
   width: 450px;
