--- a/client/src/pages/ContestListPage/ContestList.module.scss
+++ b/client/src/pages/ContestListPage/ContestList.module.scss
@@ -13,9 +13,9 @@
 }
 .liItem {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
-  padding: 5px 10px;
+  padding: 5px 25px;
   background-color: lighten($primaryColor, 15%);
   border: 1px solid #DDDDDD;
   color: white;
