--- a/client/src/pages/ShowAnswersPage/ShowAnswers.module.scss
+++ b/client/src/pages/ShowAnswersPage/ShowAnswers.module.scss
@@ -33,7 +33,6 @@
   }
 }
 
-
 .task {
   width: 450px;
   height: auto;
@@ -82,6 +81,23 @@
 }
 
 .answerWrongTest::before{
-  content: "✖";
+  content: "✘";
   margin-right: 10px;
+}
+
+.usersListShow {
+  margin-left: 1em;
+  margin-right: 1em;
+  font-size: 2em;
+  font-weight: 700;
+  color: $primaryColor;
+}
+
+.usersListShowSection {
+  &:hover {
+    cursor: pointer;
+    color: lighten($primaryColor, 15%);
+  }
+  margin: 1em auto;
+  max-width: 300px;
 }
