--- a/client/src/index.css
+++ b/client/src/index.css
@@ -242,6 +242,7 @@ nav {
     background: #34558b;
 }
 .sitename{
+    display: flex;
     width: 285px;
     height: 100%;
     float: left;
@@ -259,8 +260,7 @@ nav {
     margin-right: 10px;
 }
 .list_in_head{
-    width: 500px;
-    /*height: 100%;*/
+    margin-right: 1.5em;
     float: right;
     padding-top: 20px;
     padding-right: 10px
